Next release
  - FrozenMap collection
  - Deprecated Vector|Set|Map::put() method removed
  - == between Frozen{Vector|Set|Map} and {Vector|Set|Map} now can return true
  - Map collections learned the in-place retain() and retainWithKey()

"Beastie Boys" 6-Jan-2014
  - Support lex-time binary constants (eg. 0b10111)
  - StreamWrappers now support rmdir, mkdir, rename and unlink
  - Miscellaneous Zend PHP compatibility fixes
  - Default StatCache to off
  - Miscellaneous FastCGI fixes
  - Miscellaneous region compiler fixes
  - Map and StableMap collections use the same underlying implementation
  - Trait requirements enforced
  - hhprof performance improvements
  - Add array to string conversion notice
  - Add RaiseNotice IR opcode
  - Fix VirtualHost.<name>.Pattern matching
  - Fix various memory leaks (pdo_parse_params, Gen*WaitHandle)
  - Import a lot more Zend tests that used to crash or hang
  - Clean up base.h
  - XLS register allocation cleanup
  - Enable region compiler by default for JIT functions in ahot
  - Fatal on eval() in RepoAuthoritative mode
  - Enable LTO for HHVM
  - Fix a few SPL compatibility issues

"Appleseed" 23-Dec-2013
  - Fix issues with DOCUMENT_ROOT in fastcgi
  - Better type inference for collections and builtins in repo mode
  - Shorter syntax for lambda expressions w/ automatic captures
  - Parser support for trait require clauses
  - Move FrozenVector and Set to the HH namespace
  - Fix resource to array conversion
  - Fix a request local memory leak in foreach of apc arrays
  - Initial php_odbc API implementation
  - Implement PHP's hash_copy() function
  - Experimental tool: Memoization Opportunity Profiler
  - Various small parity/behavior fixes (in phar, proc_open, filter_var)
  - A Eval.DumpHhas=1 option to dump hhas for a php file
  - Better warnings in Set::toArray
  - Fix the behavior of foreach loops in finally blocks
  - chmod -x runtime/vm/jit/*.{cpp,h}
  - Changes to make hhvm build clean with clang-3.4