@@ -1,0 +1,13 @@
+int(10)
+float(10)
+float(10.5)
+Argument 1 passed to takes_num() must be an instance of num, string given on line 10; ignoring ...
+string(4) "10.5"
+Argument 1 passed to takes_num() must be an instance of num, string given on line 10; ignoring ...
+string(3) "foo"
+Argument 1 passed to takes_num() must be an instance of num, NumericallyStringable given on line 10; ignoring ...
+object(NumericallyStringable)#1 (0) {
+}
+Argument 1 passed to takes_num() must be an instance of num, stdClass given on line 10; ignoring ...
+object(stdClass)#1 (0) {
+}
