@@ -3,6 +3,7 @@ Next release
   - Deprecated Vector|Set|Map::put() method removed
   - == between Frozen{Vector|Set|Map} and {Vector|Set|Map} now can return true
   - Map collections learned the in-place retain() and retainWithKey()
+  - 'num' scalar typehint that accepts both ints and floats
 
 "Beastie Boys" 6-Jan-2014
   - Support lex-time binary constants (eg. 0b10111)
